<resources>
    <string name="app_name">tk_zadanie4</string>
    <string name="record_button_text">Start Recording</string>
    <string name="TextYoutIpAddress">Your IP Address:</string>
    <string name="TextYourPortNumberLabel">Your Port Number:</string>
    <string name="ButtonStartCall">Start Call</string>
    <string name="TextExternalIpAddressLabel">External Ip Address:</string>
    <string name="TextExternalPortNumberLabel">External Port Number:</string>
    <string name="ButtonEndCall">End Call</string>
    <string name="TextViewConnectionStatus">Connection Status:</string>
    <string name="TextViewSampleRateLabel">Sample Rate:</string>
    <string name="TextViewSampleIntervalLabel">Quantization Level:</string>
</resources>